--- a/src/main/webapp/partials/time-table.html
+++ b/src/main/webapp/partials/time-table.html
@@ -1,4 +1,4 @@
-<div ng-show="timeTable">
+<div>
 	<h2>
 	{{timeTable.group.courseNumber}} курс, {{timeTable.group.name}} 
 	<span ng-show="timeTable.group.department">{{timeTable.group.department}}</span>
