--- a/src/main/webapp/partials/404.html
+++ b/src/main/webapp/partials/404.html
@@ -1,4 +1,4 @@
 <div>
     <h1>Дана сторінка не існує</h1>
-    <p><a href="javascript:history.back()">Повернутися назад</a></p>
+    <p tt-Back></p>
 </div>
