--- a/src/main/webapp/partials/faculties.html
+++ b/src/main/webapp/partials/faculties.html
@@ -1,6 +1,6 @@
 <div>
 	<ul class="list-group">
-	 <li class="list-group-item" ng-repeat="faculty in faculties">
+	 <li class="list-group-item" ng-repeat="faculty in faculties._embedded.faculties">
 	 	<h4><a ng-href="#/faculty/{{faculty.id}}">{{faculty.name}}</a></h4>
 	 </li>	 
 	</ul>
