--- a/src/main/webapp/partials/time-table.html
+++ b/src/main/webapp/partials/time-table.html
@@ -1,5 +1,6 @@
 <div ng-show="timeTable.group">
 	<h2>
+	<tt-button-back></tt-button-back>
 	{{timeTable.group.courseNumber}} курс, {{timeTable.group.name}}
 	<span ng-show="timeTable.group.department">{{timeTable.group.department}}</span>
 	</h2>
