--- a/src/main/webapp/partials/faculty.html
+++ b/src/main/webapp/partials/faculty.html
@@ -5,13 +5,15 @@
     <table class="table table-hover">
         <thead>
         <th class="col-sm-1">Курс</th>
-        <th class="col-sm-6">Група</th>
-        <th class="col-sm-5">Розклад</th>
+        <th class="col-sm-4">Група</th>
+        <th class="col-sm-4">Кафедра</th>
+        <th class="col-sm-3">Розклад</th>
         </thead>
         <tbody>
         <tr ng-repeat="group in groups | orderBy: 'courseNumber'">
             <td>{{group.courseNumber}}</td>
             <td>{{group.name}}</td>
+            <td>{{group.department}}</td>
             <td>
                 <a ng-href="{{group|timeTableForGroupLink}}" class="btn btn-info" role="button"><span
                         class="glyphicon glyphicon-th-list"></span></a>
