--- a/src/main/webapp/partials/main-page.html
+++ b/src/main/webapp/partials/main-page.html
@@ -1,3 +1,4 @@
 <div>
 	<p>Дякуємо, що завітали на наш сайт. Щоб знайти портібний розклад перейдіть до <a href="#/faculties">Списку факультетів</a><p>
+	<p>Для адміністрування перейдіть до <a href="#/admin/faculties">Адмін Панелі</a></p>
 </div> 
