local directive, services refactoring, faculty saving

--- a/src/main/webapp/partials/faculties.html
+++ b/src/main/webapp/partials/faculties.html
@@ -1,7 +1,7 @@
 <div>
 	<ul class="list-group">
 	 <li class="list-group-item" ng-repeat="faculty in faculties">
-	 	<h4><a ng-href="{{faculty|facultyLink}}">{{faculty.name}}</a></h4>
+	 	<h4><a ng-href="#/faculties/{{faculty|entityId}}">{{faculty.name}}</a></h4>
 	 </li>	 
 	</ul>
 </div> 
