--- a/src/main/webapp/partials/faculty.html
+++ b/src/main/webapp/partials/faculty.html
@@ -15,7 +15,7 @@
             <td>{{group.name}}</td>
             <td>{{group.department}}</td>
             <td>
-                <a ng-href="{{group|timeTableForGroupLink}}" class="btn btn-info" role="button"><span
+                <a ng-href="#/groups/{{group|entityId}}/timetable" class="btn btn-info" role="button"><span
                         class="glyphicon glyphicon-th-list"></span></a>
             </td>
         </tr>
