--- a/src/main/webapp/partials/admin/faculty.html
+++ b/src/main/webapp/partials/admin/faculty.html
@@ -10,3 +10,14 @@
     </div>
     <button type="submit" class="btn btn-default" ng-click="saveFaculty()">Зберегти</button>
 </form>
+
+<div id="groups" ng-show="groups">
+<h4>Групи:</h4>
+<ul class="list-group">
+    <li class="list-group-item" ng-repeat="group in groups">
+        {{group.courseNumber}} курс, {{group.name}} <span ng-show="group.department">, {{group.department}}</span>
+        <a ng-href="#/admin/groups/edit/{{group|entityId}}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a ng-click="deleteGroup(group)" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a>
+    </li>
+</ul>
+</div>
