--- a/src/main/webapp/partials/faculty.html
+++ b/src/main/webapp/partials/faculty.html
@@ -1,24 +1,28 @@
 <div>
     <h2>{{faculty.name}}</h2>
+
     <p>{{faculty.description}}</p>
-    <h3>Список груп</h3>
-    <table class="table table-hover">
-        <thead>
-        <th class="col-sm-1">Курс</th>
-        <th class="col-sm-4">Група</th>
-        <th class="col-sm-4">Кафедра</th>
-        <th class="col-sm-3">Розклад</th>
-        </thead>
-        <tbody>
-        <tr ng-repeat="group in groups | orderBy: 'courseNumber'">
-            <td>{{group.courseNumber}}</td>
-            <td>{{group.name}}</td>
-            <td>{{group.department}}</td>
-            <td>
-                <a ng-href="#/groups/{{group|entityId}}/timetable" class="btn btn-info" role="button"><span
-                        class="glyphicon glyphicon-th-list"></span></a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+
+    <div id="groups" ng-show="groups">
+        <h3>Список груп</h3>
+        <table class="table table-hover">
+            <thead>
+            <th class="col-sm-1">Курс</th>
+            <th class="col-sm-4">Група</th>
+            <th class="col-sm-4">Кафедра</th>
+            <th class="col-sm-3">Розклад</th>
+            </thead>
+            <tbody>
+            <tr ng-repeat="group in groups | orderBy: 'courseNumber'">
+                <td>{{group.courseNumber}}</td>
+                <td>{{group.name}}</td>
+                <td>{{group.department}}</td>
+                <td>
+                    <a ng-href="#/groups/{{group|entityId}}/timetable" class="btn btn-info" role="button"><span
+                            class="glyphicon glyphicon-th-list"></span></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
