inverted group->faculty, group->pair dependency, integration test, repository test, refactoring

--- a/src/main/webapp/partials/admin/group.html
+++ b/src/main/webapp/partials/admin/group.html
@@ -1,4 +1,5 @@
 <h2><tt-button-back></tt-button-back> {{title|local}}</h2>
+<p>{{group}}</p>
 <form role="form" novalidate>
     <div class="form-group">
         <label for="courseNumber">Номер курсу:</label>
