--- a/src/main/webapp/partials/admin/faculty.html
+++ b/src/main/webapp/partials/admin/faculty.html
@@ -14,16 +14,15 @@
     <button type="submit" class="btn btn-default" ng-click="saveFaculty()">Зберегти</button>
 </form>
 
-<div id="groups" ng-show="groups">
+<div id="groups">
     <h4>Групи:</h4>
-
     <p>
-        <a ng-href="#/admin/faculties//new" class="btn btn-default" role="button">Додати факультет</a>
+        <a ng-href="#/admin/faculties/{{faculty.id}}/groups/new" class="btn btn-default" role="button">Додати групу</a>
     </p>
-    <ul class="list-group">
+    <ul class="list-group" ng-show="groups">
         <li class="list-group-item" ng-repeat="group in groups">
             {{group.courseNumber}} курс, {{group.name}} <span ng-show="group.department">, {{group.department}}</span>
-            <a ng-href="#/admin/groups/edit/{{group|entityId}}"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a ng-href="#/admin/faculties/{{faculty.id}}/groups/edit/{{group|entityId}}"><span class="glyphicon glyphicon-pencil"></span></a>
             <a ng-click="deleteGroup(group)" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a>
         </li>
     </ul>
