--- a/src/main/webapp/partials/admin/faculty.html
+++ b/src/main/webapp/partials/admin/faculty.html
@@ -14,7 +14,7 @@
     <button type="submit" class="btn btn-default" ng-click="saveFaculty()">Зберегти</button>
 </form>
 
-<div id="groups">
+<div id="groups" ng-show="faculty.id">
     <h4>Групи:</h4>
     <p>
         <a ng-href="#/admin/faculties/{{faculty.id}}/groups/new" class="btn btn-default" role="button">Додати групу</a>
